--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mdb-react-ui-kit": "^6.1.0",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
+    "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
